kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: bloom-sentiment-service
  namespace: model-serving
spec:
  selector:
    app: bloom-sentiment
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
